--- a/css/estilos_consola.css
+++ b/css/estilos_consola.css
@@ -16,6 +16,11 @@ body {
     text-align: left;
 }
 
+.contenedor h2,
+.contenedor p {
+    color: #0f0;
+}
+
 input, button {
     background-color: #222;
     color: #0f0;
